--- a/ChIPSeq/practicals/ChIP_Practical2_qc_2021.html
+++ b/ChIPSeq/practicals/ChIP_Practical2_qc_2021.html
@@ -252,6 +252,7 @@ str(chipSubset)</code></pre>
 <pre class="r"><code># if you get error with plotting: /home/ubuntu/.local/share/rstudio/notebooks
 # go to /home/ubuntu/.local/share/rstudio/notebooks
 # change your permission `chmod +x /home/ubuntu/.local/share/rstudio/notebooks`
+# or add savePlotPath='/home/ubuntu/Course_Materials/ChIPSeq/practicals/output/',
 
 EM_Results &lt;- qualityScores_EM(
        chipName=chipName,
@@ -272,8 +273,8 @@ PBC</code></pre>
 <blockquote>
 <p>Exercise 2</p>
 <ol style="list-style-type: decimal">
-<li>Generate strand cross-correlation plot for <code>p73</code></li>
-<li>What are those PBC, RSC, NSC for <code>TAp73alpha_r2.fastq_trimmed.fastq_sorted.bam</code> given input <code>input.fastq_trimmed.fastq_sorted.bam</code></li>
+<li>Try to play around with it yourself (May take a few mins to generate plot)</li>
+<li>(Optional) Generate strand cross-correlation plot for `p73`.</li>
 </ol>
 </blockquote>
 </div>
